@@ -1,4 +1,5 @@
 Dec 25 2003  3.1.0  More README updates
+                    Smarter handling of garbage gps values in gpsd
 Dec 24 2003  3.1.0  More README updates
                     More invalid packet detection for drivers that feed us junk
                     Fixed FCS on orinoco
